# DMS

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: tester.md  (+2 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/dms-console/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml
apps/dms-console/backend/app/: __init__.py  cli.py  db.py  demo_worker.py  export_openapi.py  main.py  mcp_server.py  models_db.py  orchestrator.py  seed.py  storage.py  store.py
apps/dms-console/backend/app/api/: router.py  routes_agent.py  routes_agents.py  routes_health.py  routes_inputs.py  routes_issues.py  routes_overview.py  routes_pipeline.py  routes_tasks.py  routes_wbs.py  routes_work.py
apps/dms-console/backend/app/core/: config.py  errors.py  pagination.py
apps/dms-console/backend/app/pipeline/: generate.py  matcher.py  parsing.py
apps/dms-console/backend/app/schemas/: common.py  models.py  requests.py
apps/dms-console/backend/app/services/: github.py
apps/dms-console/backend/tests/: test_agent_loop.py  test_agents.py  test_auth.py  test_health.py  test_inputs.py  test_issues.py  test_orchestrator.py  test_overview.py  test_pipeline.py  test_tasks.py  test_wbs.py  test_work.py
docs/: README.md  glossary.md  guide.md  principles.md
ragtest/: .gitignore  build_hub_index.sh
scripts/: .gitkeep  autopilot.sh  bootstrap_github.sh  build-mydata-hub-index.sh  gate-checks.mjs  run-mydata-rag-chat.sh
test/: .env.example  README.md  requirements.txt  run_chat.sh
(+162 files in other folders)
